[KARAF-7225]ensure karaf can build and run with JDK17